# aura

./: .cursorrules  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_AURA-9.md  FUTURE_ENHANCEMENTS_IMPLEMENTED.md  Justfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  skaffold.yaml
.cursor/commands/: README.md  commit-and-push.sh
.github/: SECRETS.md  pull_request_template.md
.github/workflows/: ci.yml  cli-release.yml  docker-build.yml  github-app-ci.yml  k8s-deploy-dev.yml  k8s-deploy-prod.yml  k8s-deploy-staging.yml  linear-sync.yml  pre-commit.yml  python-ci.yml  typescript-ci.yml  (+2 more)
apps/backend/: Dockerfile  conf.py  pyproject.toml
apps/backend/src/: conf.py  main.py
apps/backend/src/api/: __init__.py  dependencies.py  exceptions.py  logging.py  middleware.py
apps/backend/src/api/middlewares/: __init__.py  csrf.py  logging.py  rate_limit.py  security_headers.py
apps/backend/src/api/v1/audit/: __init__.py  endpoints.py  exceptions.py  schemas.py
apps/backend/src/api/v1/auth/: README.md  __init__.py  endpoints.py  exceptions.py  schemas.py
apps/backend/src/api/v1/common/: __init__.py  schemas.py
apps/backend/src/api/v1/events/: __init__.py  endpoints.py  exceptions.py  schemas.py
apps/backend/src/api/v1/rag/: __init__.py  endpoints.py  exceptions.py  schemas.py
apps/backend/src/api/v1/workflows/: __init__.py  endpoints.py  exceptions.py  schemas.py
apps/backend/src/backend/routers/: __init__.py  workflows.py
apps/backend/src/core/: config.py  dependencies.py  exceptions.py  logging.py  metrics.py  rate_limit.py  redis_client.py  security.py  security_headers.py
apps/backend/src/dao/: __init__.py  base.py  user.py
apps/backend/src/db/: __init__.py  database.py
apps/backend/src/db/models/: __init__.py  user.py
apps/backend/src/services/audit/: __init__.py  exceptions.py  service.py
apps/backend/src/services/auth/: __init__.py  cache.py  exceptions.py  service.py
apps/backend/src/services/events/: __init__.py  exceptions.py  service.py
apps/backend/src/services/redis/: __init__.py  cache.py  client.py  rate_limit.py
apps/backend/src/services/workflows/: exceptions.py  service.py
apps/backend/tests/: conftest.py  test_auth.py  test_main.py  test_workflows_api.py  test_workflows_api_simple.py
apps/backend/tests/e2e/auth/: test_auth_flow.py
apps/backend/tests/integration/: test_main.py
apps/backend/tests/integration/auth/: test_endpoints.py  test_endpoints_mocked.py
apps/backend/tests/integration/rag/: test_endpoints.py  test_rag_endpoints.py
apps/backend/tests/integration/workflows/: test_endpoints.py  test_endpoints_simple.py  test_workflows_endpoints.py
apps/backend/tests/performance/: test_auth_performance.py
apps/backend/tests/unit/auth/: test_security.py  test_service.py
clients/cli/: pyproject.toml
clients/cli/aura_cli/: config.py  main.py
clients/cli/aura_cli/commands/: __init__.py  audit.py  hook.py  rag.py
clients/cli/src/aura_cli/commands/: rag.py  rag_constants.py
docker/: Dockerfile.dev-tools  docker-compose.dev.yml  docker-compose.prod.yml  ensure-db.sh  init-db.sh
docs/: ARCHITECTURE.md  DATABASE_CONNECTION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  GITHUB_SECRETS.md  LINEAR.md  RAG.md  REQUIREMENTS.md  SECURITY.md  USER_GUIDE.md  VSCODE_EXTENSION_DEBUGGING.md
k8s/: .gitignore  README-DEV.md  README.md  config.example.yaml
libs/agentic-py/: pyproject.toml
libs/agentic-py/src/agentic_py/: __init__.py
libs/agentic-py/src/agentic_py/agents/: __init__.py  audit_agent.py  base.py  struggle_agent.py
libs/agentic-py/src/agentic_py/ai/: __init__.py  batching.py  cache.py  evaluation.py  llm.py
libs/agentic-py/src/agentic_py/config/: __init__.py  cache.py  llm.py  rag.py  workflows.py
libs/agentic-py/src/agentic_py/prompts/: __init__.py  loader.py
libs/agentic-py/src/agentic_py/prompts/agents/: audit_agent_system.md  struggle_agent_system.md  struggle_agent_user.md
libs/agentic-py/src/agentic_py/prompts/lesson_generation/: lesson_generation_base.md  lesson_generation_few_shot.md
libs/agentic-py/src/agentic_py/prompts/violation_analysis/: remediation_suggestion.md
libs/agentic-py/src/agentic_py/rag/: __init__.py  chunking.py  dependency_injection.py  exceptions.py  ingestion.py  loaders.py  service.py  utils.py
libs/agentic-py/src/agentic_py/states/: __init__.py  audit.py  struggle.py
libs/agentic-py/src/agentic_py/tools/: __init__.py  rag_tools.py
libs/agentic-py/src/agentic_py/workflows/: __init__.py  audit.py  checkpointer.py  struggle.py  struggle_agentic.py
libs/agentic-py/tests/: test_diff_parsing_edge_cases.py  test_evaluation.py  test_lesson_retrieval.py  test_llm_utils.py  test_prompt_loading_edge_cases.py  test_prompts.py  test_rag_ingestion.py  test_rag_service.py  test_red_team.py  test_state_validation.py  test_workflows.py  test_workflows_integration.py
libs/core-py/: pyproject.toml
libs/core-py/docs/: CHUNKING_STRATEGY.md  MODEL_SELECTION.md
libs/core-py/src/core_py/: __init__.py
libs/core-py/src/core_py/ml/: __init__.py  batching.py  cache.py  config.py  evaluation.py  llm.py
libs/core-py/src/core_py/prompts/: __init__.py  loader.py
libs/core-py/src/core_py/prompts/violation_analysis/: violation_analysis_ambiguous.md  violation_analysis_base.md
libs/core-py/src/core_py/rag/: LOGGING_GUIDELINES.md  README.md  __init__.py  chunking.py  dependency_injection.py  ingestion.py  loaders.py  service.py  utils.py
libs/core-py/src/core_py/workflows/: __init__.py  audit.py  checkpointer.py  struggle.py
libs/core-py/tests/: test_diff_parsing_edge_cases.py  test_evaluation.py  test_input_validation.py  test_llm_utils.py  test_prompt_loading_edge_cases.py  test_prompts.py  test_rag_ingestion.py  test_rag_service.py  test_red_team.py  test_state_validation.py  test_workflows.py  test_workflows_integration.py
role_tasks/: ROADMAP.md
scripts/: branch-with-linear.sh  ci-check.sh  commit-and-push.sh  create-linear-issue.sh  test-lesson-ingestion.py
(+298 files in other folders)
