[project]
name = "aura"
version = "0.1.0"
description = "Aura Monorepo"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.14.11",
]

[tool.uv.workspace]
members = ["apps/backend", "clients/cli", "libs/agentic-py"]

[tool.uv.sources]
aura-cli = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "aura-cli",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
    "pre-commit>=3.7.0",
    "bandit>=1.7.8",
]
