[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.29.0",
    "bcrypt>=4.0.0",
    "core-py",
    "email-validator>=2.0.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "loguru>=0.7.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "redis>=5.0.0",
    "sqlmodel>=0.0.14",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (isolated, mocked dependencies)",
    "integration: Integration tests (require database/Redis)",
    "e2e: End-to-end tests (require full stack)",
    "performance: Performance and benchmark tests",
]

[tool.uv.sources]
core-py = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in FastAPI route handlers)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG", "S101"]  # Allow unused args and assert in tests

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_openai.*",
    "langgraph.*",
    "langgraph_checkpoint_postgres.*",
    "redis.*",
    "redis.asyncio.*",
    "bcrypt.*",
    "jose.*",
    "yaml.*",
    "fastapi.*",
]
ignore_missing_imports = true
