[project]
name = "agentic-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ofir Cohen", email = "ofircohen2005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-postgres>=3.0.3",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.3.0",
    "pgvector>=0.3.0",
    "faiss-cpu>=1.7.4",
    "redis>=5.0.0",
    "types-redis>=4.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG", "S101", "SIM117"]  # Allow unused args, assert, and nested with in tests

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_openai.*",
    "langgraph.*",
    "langgraph_checkpoint_postgres.*",
    "redis.*",
    "redis.asyncio.*",
]
ignore_missing_imports = true
